fix(packages/app): poor overflow in contexts table
Fixes #1189

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -551,6 +551,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 }
 .repl.sidecar-visible .result-table .entity-name-group-extra-narrow {
     width: 9em;
+    max-width: initial;
 }
 .header-cell {
     text-align: left; /* th defaults to text-align: center */
